Change how data is saved in DB (big update)
